umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_clf.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["Cl#n3#v" "F#n3#v"]
      :bonds [[0 1 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}
  :counts {
    :output {
      :atoms ["Cl#n3#v" "F#n3#v"]
      :bonds [[0 1 :single]]
      :charge 0
      :spin "#u0#s1"}
    :success true}}
