umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_co.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#c-#n#v3" "1" "O#c+#n#v3"} :bonds [["0" "1" "3"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#c-#n#v3" "1" "O#c+#n#v3"} :bonds [["0" "1" "3"]] :charge 0 :spin "#u0 #s1"}}}
