umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_co2.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "O#n2#v2" "1" "C#v4" "2" "O#n2#v2"} :bonds [["0" "1" "2"] ["1" "2" "2"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "O#n2#v2" "1" "C#v4" "2" "O#n2#v2"} :bonds [["0" "1" "2"] ["1" "2" "2"]] :charge 0 :spin "#u0 #s1"}}}
