umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_cs2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string_pretty(&results).unwrap()
---
{
  :atom-typing {
    :output {
      :atoms ["S#n2#v2" "C#v4" "S#n2#v2"]
      :bonds [[0 1 :double] [1 2 :double]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}
  :counts {
    :output {
      :atoms ["S#n2#v2" "C#v4" "S#n2#v2"]
      :bonds [[0 1 :double] [1 2 :double]]
      :charge 0
      :spin "#u0 #s1"}
    :success true}}
