umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_h2s2.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "H#v" "1" "S#n2#v2" "2" "S#n2#v2" "3" "H#v"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "H#v" "1" "S#n2#v2" "2" "S#n2#v2" "3" "H#v"} :bonds [[0 1 "1"] [1 2 "1"] [2 3 "1"]] :charge 0 :spin "#u0 #s1"}}}
