umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@inorganic_small_h3bo3.snap
---
source: umol-models-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "B#v3" "1" "O#n2#v2" "2" "O#n2#v2" "3" "O#n2#v2" "4" "H#v" "5" "H#v" "6" "H#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["1" "4" "1"] ["2" "5" "1"] ["3" "6" "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "B#v3" "1" "O#n2#v2" "2" "O#n2#v2" "3" "O#n2#v2" "4" "H#v" "5" "H#v" "6" "H#v"} :bonds [["0" "1" "1"] ["0" "2" "1"] ["0" "3" "1"] ["1" "4" "1"] ["2" "5" "1"] ["3" "6" "1"]] :charge 0 :spin "#u0 #s1"}}}
